# resend-email-forwarding

./: .env.example  Cargo.toml  Dockerfile  README.md
src/: main.rs
